fixed an issue where the slideshow buttons on the website did not line up on mobile

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -56,8 +56,8 @@ div {
 	padding: 10px 20px;
 	background-color: #fff;
 	display: inline-block;
-	margin-left: 20px;
-	margin-right: 20px;
+	margin-left: 15px;
+	margin-right: 15px;
 		
 	-webkit-transition: 200ms;
     -moz-transition: 200ms;
